--- a/css/style.css
+++ b/css/style.css
@@ -200,7 +200,7 @@ button:focus {
 
 /* Divider  general  */
 .divider {
-    background-image: url(assets/images/paperw.jpg);
+    background-image: url(/assets/images/paperw.jpg);
     box-shadow: -4px 2px 20px 7px #111111;
 }
 
@@ -246,7 +246,7 @@ button:focus {
 .background-box {
     margin-top: 0px;
     padding: 0;
-    background-image: url(assets/images/redrain.jpg);
+    background-image: url(/assets/images/redrain.jpg);
     height: 100vh;
     width: auto;
     background-position: top 0 right 0;
@@ -306,7 +306,7 @@ button:focus {
 .background-box-gallery {
     margin-top: 0px;
     padding: 0;
-    background-image: url(assets/images/allred.jpg);
+    background-image: url(/assets/images/allred.jpg);
     height: 100vh;
     width: auto;
     background-position: top 0 right 10%;
@@ -340,7 +340,7 @@ button:focus {
     display: flex;
     margin: 0;
     padding: 0;
-    background-image: url(assets/images/greenlight.jpg);
+    background-image: url(/assets/images/greenlight.jpg);
     height: 100vh;
     width: auto;
     background-position: top 0 right 0;
@@ -364,7 +364,7 @@ button:focus {
     .background-box-archive {
         height: 100vh;
         width: auto;
-        background-image: url(assets/images/greenlight2.jpg);
+        background-image: url(/assets/images/greenlight2.jpg);
         background-repeat: no-repeat;
         background-position: top 0 left 0;
         background-size: 50% auto;
@@ -428,7 +428,7 @@ button:focus {
     .background-box-about {
         height: 900px;
         width: auto;
-        background-image: url(assets/images/maskoffm.jpg);
+        background-image: url(/assets/images/maskoffm.jpg);
         background-position: top 72px center;
         background-size: 100% auto;
         background-repeat: no-repeat;
@@ -450,7 +450,7 @@ button:focus {
     .background-box-about {
         height: 1010px;
         width: auto;
-        background-image: url(assets/images/maskoffm.jpg);
+        background-image: url(/assets/images/maskoffm.jpg);
         background-position: top 72px center;
         background-size: 100% auto;
         background-repeat: no-repeat;
@@ -488,7 +488,7 @@ button:focus {
     .background-box-about {
         height: 1080px;
         width: auto;
-        background-image: url(assets/images/maskoffm.jpg);
+        background-image: url(/assets/images/maskoffm.jpg);
         background-position: top 72px center;
         background-size: 100% auto;
         background-repeat: no-repeat;
@@ -509,7 +509,7 @@ button:focus {
     .background-box-about {
         height: 1264px;
         width: 100vw;
-        background-image: url(assets/images/maskoff.jpg);
+        background-image: url(/assets/images/maskoff.jpg);
         background-position: top 94px center;
         background-size: 100% auto;
         background-repeat: no-repeat;
@@ -534,9 +534,9 @@ button:focus {
     .background-box-about {
         height: 100rem;
         width: auto;
-        background-image: url(assets/images/maskoff.jpg);
+        background-image: url(/assets/images/maskoff.jpg);
         background-repeat: no-repeat;
-        background-position: top 0center;
+        background-position: top 0 center;
         background-size: 100% auto;
     }
 
@@ -556,7 +556,7 @@ button:focus {
     .background-box-about {
         height: 80rem;
         width: auto;
-        background-image: url(assets/images/maskoff.jpg);
+        background-image: url(/assets/images/maskoff.jpg);
         background-repeat: no-repeat;
         background-position: top 100px right 0;
         background-size: 50%;
@@ -582,7 +582,7 @@ button:focus {
     .background-box-about {
         height: 100vh;
         width: auto;
-        background-image: url(assets/images/maskoff.jpg);
+        background-image: url(/assets/images/maskoff.jpg);
         background-repeat: no-repeat;
         background-position: top 100px right 0;
         background-size: 50%;
@@ -622,7 +622,7 @@ button:focus {
     box-shadow: inset 0 0 0 1440px rgba(250, 245, 240, 0.541);
     margin: 0;
     padding: 0;
-    background-image: url(assets/images/speaker.jpg);
+    background-image: url(/assets/images/speaker.jpg);
     height: 1440px;
     width: auto;
     background-position: top 0 left 0;
@@ -669,6 +669,7 @@ form {
     color: #100e0e;
     padding: 0 3% 0 2%;
     font-family: "Montserrat", sans-serif;
+    align-self: flex-end;
 }
 
 #InputName {
@@ -701,6 +702,7 @@ form h5 {
 #myCV {
     font-family: 'Julius Sans One', monospace;
     color: rgb(239, 147, 147);
+    cursor: pointer;
 }
 
 #submitContact {
@@ -813,7 +815,7 @@ form h5 {
         box-shadow: inset 0 0 0 1440px rgb(250, 245, 240, 0.541);
         margin: 0;
         padding: 0;
-        background-image: url(assets/images/speaker.jpg);
+        background-image: url(/assets/images/speaker.jpg);
         height: auto;
         width: auto;
         background-position: top 0 left 0;
@@ -825,18 +827,17 @@ form h5 {
         z-index: -2;
     }
 
-    .invitation {
+    .contact-content {
         display: flex;
-        flex-flow: column wrap;
-        font-family: "Montserrat", sans-serif;
-        color: #100e0e;
-        padding: 8rem 4% 3% 2%;
         align-self: flex-end;
     }
-
-    .white-overlay {
-        padding-bottom: 3%;
+    .invitation {
+        display: flex;
+        flex-flow: column;
+        height: 100%;
+        padding: 0 4% 0 2%;
     }
+
 
     form {
         padding: 3rem 4% 0 4%;
@@ -848,7 +849,7 @@ form h5 {
     }
 
     .axed {
-        padding: 0 4%;
+        padding: 3rem 2% 0 4%;
     }
 
 
@@ -858,7 +859,7 @@ form h5 {
 
     .download-col {
         padding-top: 0;
-        margin: 4%;
+        margin: 2%;
     }
 
 
@@ -869,7 +870,7 @@ form h5 {
         box-shadow: inset 0 0 0 1440px rgb(250, 245, 240, 0.541);
         margin: 0;
         padding: 0;
-        background-image: url(assets/images/speaker.jpg);
+        background-image: url(/assets/images/speaker.jpg);
         height: auto;
         min-width: auto;
         background-position: top 0 left 0;
@@ -879,10 +880,6 @@ form h5 {
         border: none;
         overflow: hidden;
         z-index: -2;
-    }
-
-    .white-overlay {
-        padding-bottom: 2%;
     }
 
 }
