--- a/css/style.css
+++ b/css/style.css
@@ -53,8 +53,8 @@ button:focus {
     position: relative;
     text-align: left;
     background-color: rgba(0, 0, 0, 0.50);
-    margin: 0;
-    padding-left: 1%;
+    margin: 0 1rem;
+    padding-left: 4.5%;
     transition: 0.5s;
     -webkit-transition: 0.5s;
     -moz-transition: 0.5s;
@@ -88,6 +88,7 @@ button:focus {
 }
 
 .navbar-default .navbar-collapse .navbar-nav>li>a {
+    margin: auto;
     padding: 10px 15px;
     color: rgb(243, 234, 234);
     font-family: "Montserrat", sans-serif;
@@ -101,11 +102,16 @@ button:focus {
 .navbar #collapseMenu>li>a:active {
     color: rgb(255, 109, 109);
     text-decoration: none;
+    transition: all .5s;
     transform: scale(1.1);
     -webkit-transform: scale(1.1);
     -moz-transform: scale(1.1);
     -ms-transform: scale(1.1);
     -o-transform: scale(1.1);
+    -webkit-transition: all .5s;
+    -moz-transition: all .5s;
+    -ms-transition: all .5s;
+    -o-transition: all .5s;
 }
 
 .navbar-toggler {
@@ -196,6 +202,9 @@ button:focus {
     }
 }
 
+
+   
+
 /* -------------------------------- Dividers  */
 
 /* Divider  general  */
@@ -208,7 +217,7 @@ button:focus {
     color: rgb(32, 27, 27);
 }
 
-.quotation > h4 {
+.quotation>h4 {
     display: block;
     text-align: center;
     font-family: 'Nunito', sans-serif;
@@ -219,7 +228,7 @@ button:focus {
     padding: 25px 10px 0 10px;
 }
 
-.reference > h6 {
+.reference>h6 {
     display: block;
     text-align: center;
     font-family: 'Montserrat', sans-serif;
@@ -280,109 +289,291 @@ button:focus {
 }
 
 /* Home --------------------------- Poster   */
+/* fadeing in the page content on load - https://stackoverflow.com/questions/11679567/using-css-for-fade-in-effect-on-page-load */
 
-
-.actual-row {
-    display: flex;
-    width: 100vw;
-    height: auto;
-    justify-content: center;
-}
 .actual-content {
-    margin-top: 20vh;
-    
+    display: none;
+    height: 0;
+    animation: fadein 8s;
+    -webkit-animation: fadein 8s;
+    animation-delay: 0s;
+}
+
+@keyframes fadein {
+    from    {
+        display: none;
+        height: 0;
+        opacity: 0;}
+    top     {
+        display: block;
+        height: 100%;
+        opacity: 1;}
+}
+
+.popInfo-small {
+    display: none;
+    height: 0;
+}
+
+.actual-content {
+    display: block;
+}
+
+.popPoster {
+    display: flex;
+    flex-flow: row;
+    min-height: 100vh;
+    overflow-x: hidden;
+    overflow-y: auto;
 }
 
 .imgWrap {
-    padding: 0;
-}
-.popPoster {
-    display: flex;
-    flex-flow: column wrap;
-    height: 600px;
-    /*border: solid 1px white;*/
-    margin-left: 8%;
-    padding-top: 2%;
-    padding-left: 2%;
-    padding-right: 2%;
-    padding-bottom: 30px;
-    overflow: auto;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 4vw 0 0 0;
 }
 
-#popPoster {
-    border-radius: 720px;
-    padding: 0;
-    -webkit-border-radius: 720px;
-    -moz-border-radius: 720px;
-    -ms-border-radius: 720px;
-    -o-border-radius: 720px;
+#popImage {
+    width: 90vw;
+    height: 90vw;
 }
 
 .popInfo {
     display: flex;
     flex-flow: column;
     height: 100%;
-    margin-top: -30px;
-    padding: 0;
-    align-self: center;
-    
+    width: 100%;
+    margin-top: -40px;
+    margin-left: -26vw;
+    padding-top: 4%;
+
 }
 
-.popInfo h2 {
-    display: inline;
+.popTitle {
+    perspective: 400px;
+    margin-left: 27vw;
+    text-emphasis: underline;
+}
+
+.popTitle h2 u {
+    display: flex;
     position: relative;
-    transform: rotate( -10deg);
-    color: rgba(252, 56, 164, 0.8);
+    color: rgba(253, 122, 247, 0.842);
     text-shadow: 0 0 0.8rem rgba(255, 255, 255, 0.5);
-    font-family: "Montserrat", sans-serif;
-    font-size: 2rem;
-    font-stretch: narrower;
-    letter-spacing: 5px; 
-    padding-left: 0;
-    transform: rotate( -20deg);
-    -webkit-transform: rotate( -20deg);
-    -moz-transform: rotate( -20deg);
-    -ms-transform: rotate( -20deg);
-    -o-transform: rotate( -20deg);
+    font-family: "Arial BlackH", sans-serif;
+    font-size: 4vw;
+    letter-spacing: 5px;
 }
 
 /* attribution tutor for text shadow - https://line25.com/tutorials/how-to-create-a-cool-anaglyhic-text-effect-with-css */
-.popInfo h2:after {
+.popTitle h2 u:after {
     content: "CHOREOPOP";
-    position: absolute; left: 3px; top: 2px;
-    color: rgb(98, 224, 255);
+    position: absolute;
+    left: 3px;
+    top: 2px;
+    color: rgb(122, 253, 242);
 }
 
-.popInfo > .infoText {
-    display: inline-flex;
-    width: 50%;
-    padding-left: 0;
+.infoText {
+    display: flex;
+    flex-wrap: wrap;
+    position: relative;
+    max-width: 65vw;
+    height: 100%;
+    padding-top: 24vw;
+    padding-left: 28vw;
     color: rgba(252, 250, 245);
+    text-shadow: 0 0 0.8rem rgba(0, 0, 0, 0.5);
     font-family: "Montserrat", sans-serif;
-    font-size: 0.9rem;
+    font-size: 2vw;
     text-align: left;
-    margin-top: 40%;
-    margin-left: 2%;
-    float: left;
-    transform: rotate(10deg);
-    -webkit-transform: rotate(10deg);
-    -moz-transform: rotate(10deg);
-    -ms-transform: rotate(10deg);
-    -o-transform: rotate(10deg);
+    margin-top: 0;
+    margin-left: 0;
+    background-color: rgba(127, 255, 212, 0);
+    transform: rotateX(60deg) rotateZ(60deg);
+    -webkit-transform: rotateX(20deg) rotateZ(24deg);
+    -moz-transform: rotateX(60deg) rotateZ(60deg);
+    -ms-transform: rotateX(60deg) rotateZ(60deg);
+    -o-transform: rotateX(60deg) rotateZ(60deg);
+}
+
+.linkWrap {
+    display: block;
 }
 
 .actualLink {
-   
     display: flex;
 }
-#actualLink {  
-    margin-left: auto;
+
+#actualLinkID {
+    margin-right: auto;
+    color: rgb(239, 147, 147);
+    font-size: 2vw;
 }
 
 @media only screen and (max-width: 425px) {
+    .popInfo{
+        display: none;
+        height: 0;
+    }
 
+    .popInfo-small {
+        display: flex;
+        flex-flow: column;
+        height: 100%;
+        width: 100%;
+        margin-top: 0;
+        padding-top: 0;
+    }
+    
+    /* after -->  */
+
+
+    .popInfo h2 u{
+        margin-top: 1vw;
+        font-size: 5vw;
+        letter-spacing: 8px;
+    }
+
+    .infoText {
+        font-size: 2vw;
+    }
+
+    #actualLinkID {
+        align-self: flex-start;
+        font-size: 2vw;
+        margin-top: 1px;
+    }
+}
 
 }
+
+@media only screen and (max-width: 767px) {}
+
+@media only screen and (min-width: 768px) {
+    .imgWrap {
+        display: flex;
+        padding-top: 20vh;
+        padding-left: 8%;
+    }
+
+    #popImage {
+        width: 30vw;
+        height: 30vw;
+        border-radius: 720px;
+        -webkit-border-radius: 720px;
+        -moz-border-radius: 720px;
+        -ms-border-radius: 720px;
+        -o-border-radius: 720px;
+    }
+
+    .popInfo {
+        display: flex;
+        flex-flow: column;
+        height: 100%;
+        width: 100%;
+        margin-top: -40px;
+        margin-left: -26vw;
+        padding-top: 4%;
+    }
+
+    .popTitle {
+        perspective: 400px;
+        margin-left: 27vw;
+        text-emphasis: underline;
+    }
+
+    .popTitle h2 u {
+        font-size: 4vw;
+        letter-spacing: 5px;
+        transform: rotateX(45deg) rotateZ(-25deg);
+        -webkit-transform: rotateX(45deg) rotateZ(-25deg);
+        -moz-transform: rotateX(45deg) rotateZ(-25deg);
+        -ms-transform: rotateX(45deg) rotateZ(-25deg);
+        -o-transform: rotateX(45deg) rotateZ(-25deg);
+        -webkit-transform: otate(-20deg);
+    }
+
+    .Info3d {
+        perspective: 250px;
+    
+    }
+    .popInfo h2 u{
+        margin-top: 1vw;
+        font-size: 5vw;
+        letter-spacing: 8px;
+    }
+
+    .infoText {
+        text-align: left;
+        max-width: 65vw;
+        font-size: 2vw;
+        padding-top: 24vw;
+        padding-left: 28vw;
+        background-color: rgba(127, 255, 212, 0);
+    transform: rotateX(60deg) rotateZ(60deg);
+    -webkit-transform: rotateX(20deg) rotateZ(24deg);
+    -moz-transform: rotateX(60deg) rotateZ(60deg);
+    -ms-transform: rotateX(60deg) rotateZ(60deg);
+    -o-transform: rotateX(60deg) rotateZ(60deg);
+}
+    }
+
+    #actualLinkID {
+        align-self: flex-start;
+        font-size: 2vw;
+        margin-right: auto;
+        margin-top: 1px;
+    }
+}
+
+@media only screen and (min-width: 1024px) {
+    .popInfo h2 u{
+        margin-top: 1vw;
+        margin-left: 1vw;
+        font-size: 5vw;
+        letter-spacing: 8px;
+    }
+
+    .infoText {
+        font-size: 1.5vw;
+    }
+
+    #actualLinkID {
+        align-self: flex-start;
+        font-size: 2vw;
+        margin-top: 1vw;
+    }
+}
+
+@media only screen and (min-width: 1440px) {
+    .popInfo h2 u{
+        max-width: 35vw;
+        margin-top: 3vw;
+        font-size: 5vw;
+        letter-spacing: 8px;
+    }
+    .Info3d {
+        perspective: 250px;
+    
+    }
+    
+    .infoText {
+        max-width: 55vw;
+        height: 100%;
+        padding-top: 16vw;
+        padding-left: 28vw;
+        font-size: 1vw;
+        text-align: left;
+    }
+
+    #actualLinkID {
+        margin-top: 1%;
+        font-size: 1vw;
+    }
+}
+
 /* --------------------------------  Gallery   */
 
 .background-box-gallery {
@@ -489,7 +680,7 @@ button:focus {
 
 .about-text-content {
     background-color: rgba(0, 0, 0, 0.404);
-    
+
     display: block;
     width: 100vw;
     text-align: center;
@@ -914,6 +1105,7 @@ form h5 {
         display: flex;
         align-self: flex-end;
     }
+
     .invitation {
         display: flex;
         flex-flow: column;
