--- a/css/style.css
+++ b/css/style.css
@@ -203,7 +203,7 @@ button:focus {
 }
 
 
-   
+
 
 /* -------------------------------- Dividers  */
 
@@ -294,25 +294,38 @@ button:focus {
 .actual-content {
     display: none;
     height: 0;
+    width: 100vw;
     animation: fadein 8s;
     -webkit-animation: fadein 8s;
     animation-delay: 0s;
 }
 
 @keyframes fadein {
-    from    {
+    from {
         display: none;
         height: 0;
-        opacity: 0;}
-    top     {
+        opacity: 0;
+    }
+
+    top {
         display: block;
         height: 100%;
-        opacity: 1;}
+        opacity: 1;
+    }
+}
+
+.popInfo {
+    display: none;
+    height: 0;
 }
 
 .popInfo-small {
-    display: none;
-    height: 0;
+    display: flex;
+    flex-flow: column;
+    height: 100%;
+    width: 100%;
+    margin-top: 0;
+    padding-top: 0;
 }
 
 .actual-content {
@@ -322,7 +335,7 @@ button:focus {
 .popPoster {
     display: flex;
     flex-flow: row;
-    min-height: 100vh;
+    height: 60vh;
     overflow-x: hidden;
     overflow-y: auto;
 }
@@ -337,33 +350,28 @@ button:focus {
 #popImage {
     width: 90vw;
     height: 90vw;
+    border-radius: 720px;
+    -webkit-border-radius: 720px;
+    -moz-border-radius: 720px;
+    -ms-border-radius: 720px;
+    -o-border-radius: 720px;
 }
 
-.popInfo {
-    display: flex;
-    flex-flow: column;
-    height: 100%;
-    width: 100%;
-    margin-top: -40px;
-    margin-left: -26vw;
-    padding-top: 4%;
-
-}
-
-.popTitle {
-    perspective: 400px;
-    margin-left: 27vw;
-    text-emphasis: underline;
-}
 
 .popTitle h2 u {
     display: flex;
     position: relative;
+    margin-right: auto;
+    margin-left: auto;
     color: rgba(253, 122, 247, 0.842);
     text-shadow: 0 0 0.8rem rgba(255, 255, 255, 0.5);
     font-family: "Arial BlackH", sans-serif;
-    font-size: 4vw;
+    font-size: 10vw;
     letter-spacing: 5px;
+    margin-top: -30vw;
+    max-width: 100vw;
+    text-emphasis: underline;
+    text-align: center!important;
 }
 
 /* attribution tutor for text shadow - https://line25.com/tutorials/how-to-create-a-cool-anaglyhic-text-effect-with-css */
@@ -377,95 +385,46 @@ button:focus {
 
 .infoText {
     display: flex;
-    flex-wrap: wrap;
     position: relative;
-    max-width: 65vw;
+    max-width: 100vw;
     height: 100%;
-    padding-top: 24vw;
-    padding-left: 28vw;
+    padding-top: 1vw;
     color: rgba(252, 250, 245);
     text-shadow: 0 0 0.8rem rgba(0, 0, 0, 0.5);
     font-family: "Montserrat", sans-serif;
-    font-size: 2vw;
+    font-size: 4vw;
     text-align: left;
-    margin-top: 0;
+    margin-top: -6vw;
     margin-left: 0;
-    background-color: rgba(127, 255, 212, 0);
-    transform: rotateX(60deg) rotateZ(60deg);
-    -webkit-transform: rotateX(20deg) rotateZ(24deg);
-    -moz-transform: rotateX(60deg) rotateZ(60deg);
-    -ms-transform: rotateX(60deg) rotateZ(60deg);
-    -o-transform: rotateX(60deg) rotateZ(60deg);
 }
 
 .linkWrap {
     display: block;
+    margin-bottom: 1vw;
 }
 
 .actualLink {
     display: flex;
 }
 
-#actualLinkID {
+#actualLinkID-small {
     margin-right: auto;
     color: rgb(239, 147, 147);
-    font-size: 2vw;
+    font-size: 4vw;
+    padding-bottom: 18px;
 }
 
 @media only screen and (max-width: 425px) {
-    .popInfo{
-        display: none;
-        height: 0;
-    }
-
-    .popInfo-small {
-        display: flex;
-        flex-flow: column;
-        height: 100%;
-        width: 100%;
-        margin-top: 0;
-        padding-top: 0;
-    }
-    
-    /* after -->  */
 
 
-    .popInfo h2 u{
-        margin-top: 1vw;
-        font-size: 5vw;
-        letter-spacing: 8px;
-    }
-
-    .infoText {
-        font-size: 2vw;
-    }
-
-    #actualLinkID {
-        align-self: flex-start;
-        font-size: 2vw;
-        margin-top: 1px;
-    }
-}
-
-}
+    /* after --> */
 
 @media only screen and (max-width: 767px) {}
 
 @media only screen and (min-width: 768px) {
-    .imgWrap {
-        display: flex;
-        padding-top: 20vh;
-        padding-left: 8%;
-    }
-
-    #popImage {
-        width: 30vw;
-        height: 30vw;
-        border-radius: 720px;
-        -webkit-border-radius: 720px;
-        -moz-border-radius: 720px;
-        -ms-border-radius: 720px;
-        -o-border-radius: 720px;
+    .popInfo-small {
+        display: none;
+        height: 0;
     }
 
     .popInfo {
@@ -478,6 +437,26 @@ button:focus {
         padding-top: 4%;
     }
 
+    .popPoster {
+        display: flex;
+        flex-flow: row;
+        min-height: 100vh;
+        overflow-x: hidden;
+        overflow-y: auto;
+    }
+
+    .imgWrap {
+        display: flex;
+        padding-top: 20vh;
+        padding-left: 8%;
+    }
+
+    #popImage {
+        width: 30vw;
+        height: 30vw;
+    }
+
+
     .popTitle {
         perspective: 400px;
         margin-left: 27vw;
@@ -485,8 +464,6 @@ button:focus {
     }
 
     .popTitle h2 u {
-        font-size: 4vw;
-        letter-spacing: 5px;
         transform: rotateX(45deg) rotateZ(-25deg);
         -webkit-transform: rotateX(45deg) rotateZ(-25deg);
         -moz-transform: rotateX(45deg) rotateZ(-25deg);
@@ -495,11 +472,20 @@ button:focus {
         -webkit-transform: otate(-20deg);
     }
 
+    /* attribution tutor for text shadow - https://line25.com/tutorials/how-to-create-a-cool-anaglyhic-text-effect-with-css */
+.popTitle h2 u:after {
+    content: "CHOREOPOP";
+    position: absolute;
+    left: 3px;
+    top: 2px;
+    color: rgb(122, 253, 242);
+}
     .Info3d {
         perspective: 250px;
-    
+
     }
-    .popInfo h2 u{
+
+    .popInfo h2 u {
         margin-top: 1vw;
         font-size: 5vw;
         letter-spacing: 8px;
@@ -512,24 +498,25 @@ button:focus {
         padding-top: 24vw;
         padding-left: 28vw;
         background-color: rgba(127, 255, 212, 0);
-    transform: rotateX(60deg) rotateZ(60deg);
-    -webkit-transform: rotateX(20deg) rotateZ(24deg);
-    -moz-transform: rotateX(60deg) rotateZ(60deg);
-    -ms-transform: rotateX(60deg) rotateZ(60deg);
-    -o-transform: rotateX(60deg) rotateZ(60deg);
+        transform: rotateX(60deg) rotateZ(60deg);
+        -webkit-transform: rotateX(20deg) rotateZ(24deg);
+        -moz-transform: rotateX(60deg) rotateZ(60deg);
+        -ms-transform: rotateX(60deg) rotateZ(60deg);
+        -o-transform: rotateX(60deg) rotateZ(60deg);
+    }
 }
-    }
 
-    #actualLinkID {
-        align-self: flex-start;
-        font-size: 2vw;
-        margin-right: auto;
-        margin-top: 1px;
-    }
+#actualLinkID {
+    color: rgb(239, 147, 147);
+    align-self: flex-start;
+    font-size: 2vw;
+    margin-right: auto;
+    margin-top: 1px;
+}
 }
 
 @media only screen and (min-width: 1024px) {
-    .popInfo h2 u{
+    .popInfo h2 u {
         margin-top: 1vw;
         margin-left: 1vw;
         font-size: 5vw;
@@ -548,17 +535,18 @@ button:focus {
 }
 
 @media only screen and (min-width: 1440px) {
-    .popInfo h2 u{
+    .popInfo h2 u {
         max-width: 35vw;
         margin-top: 3vw;
         font-size: 5vw;
         letter-spacing: 8px;
     }
+
     .Info3d {
         perspective: 250px;
-    
+
     }
-    
+
     .infoText {
         max-width: 55vw;
         height: 100%;
