--- a/css/style.css
+++ b/css/style.css
@@ -278,78 +278,60 @@ button:focus {
     padding: 0;
     margin: 0;
 }
-
-.home-row {
-    display: flex;
-    margin-top: 98px;
+.mask-layer-home {
+    display: inline-block;
+    height: 100vh;
 }
-
-.some-text {
-    color: black;
+.home-row {
+    margin-top: 98px;
 }
 
 /* Home --------------------------- Poster   */
 /* fadeing in the page content on load - https://stackoverflow.com/questions/11679567/using-css-for-fade-in-effect-on-page-load */
 
+
 .actual-content {
-    display: none;
-    height: 0;
+    display: flex;
+    flex-flow: column;
+    height: 50%;
     width: 100vw;
-    animation: fadein 8s;
-    -webkit-animation: fadein 8s;
+    animation: fadein 3s;
+    -webkit-animation: fadein 3s;
     animation-delay: 0s;
+    overflow: auto;
 }
 
 @keyframes fadein {
     from {
         display: none;
-        height: 0;
         opacity: 0;
     }
 
     top {
         display: block;
-        height: 100%;
         opacity: 1;
     }
-}
-
-.popInfo {
-    display: none;
-    height: 0;
-}
-
-.popInfo-small {
-    display: flex;
-    flex-flow: column;
-    height: 100%;
-    width: 100%;
-    margin-top: 0;
-    padding-top: 0;
-}
-
-.actual-content {
-    display: block;
 }
 
 .popPoster {
     display: flex;
     flex-flow: row;
-    height: 60vh;
+    height: 100%;
     overflow-x: hidden;
     overflow-y: auto;
 }
 
 .imgWrap {
     display: block;
-    margin-left: auto;
-    margin-right: auto;
-    padding: 4vw 0 0 0;
+    width: 100%;
+    height: auto;
+    padding: 0 0 0 0;
 }
 
+/* Choreopo/ Glittergods */
 #popImage {
-    width: 90vw;
-    height: 90vw;
+    width: 100%;
+    height: auto;
     border-radius: 720px;
     -webkit-border-radius: 720px;
     -moz-border-radius: 720px;
@@ -357,30 +339,67 @@ button:focus {
     -o-border-radius: 720px;
 }
 
+#glitterImage {
+    width: 100%;
+    height: auto;
+    border-radius: 720px;
+    -webkit-border-radius: 720px;
+    -moz-border-radius: 720px;
+    -ms-border-radius: 720px;
+    -o-border-radius: 720px;
+}
+
+.popInfo {
+    display: flex;
+    flex-flow: column;
+    width: 100vw;
+    height: auto;
+    margin-top: 0;
+    padding-top: 0;
+}
 
 .popTitle h2 u {
     display: flex;
     position: relative;
-    margin-right: auto;
-    margin-left: auto;
     color: rgba(253, 122, 247, 0.842);
     text-shadow: 0 0 0.8rem rgba(255, 255, 255, 0.5);
     font-family: "Arial BlackH", sans-serif;
     font-size: 10vw;
     letter-spacing: 5px;
-    margin-top: -30vw;
+    margin-top: -15vw;
     max-width: 100vw;
     text-emphasis: underline;
-    text-align: center!important;
 }
 
 /* attribution tutor for text shadow - https://line25.com/tutorials/how-to-create-a-cool-anaglyhic-text-effect-with-css */
 .popTitle h2 u:after {
     content: "CHOREOPOP";
     position: absolute;
-    left: 3px;
-    top: 2px;
-    color: rgb(122, 253, 242);
+    left: 4px;
+    top: 3px;
+    color: rgb(84, 253, 239);
+}
+
+.glitterTitle h2 u {
+    display: flex;
+    position: relative;
+    color: rgba(247, 63, 103, 0.842);
+    text-shadow: 0 0 1rem rgba(255, 3, 3, 0.8);
+    font-family: "Arial BlackH", sans-serif;
+    font-size: 8vw;
+    letter-spacing: 5px;
+    margin-top: -15vw;
+    max-width: 100vw;
+    text-emphasis: underline;
+}
+
+
+.glitterTitle h2 u:after {
+    content: "GLITTERGODS/ STIGMA";
+    position: absolute;
+    left: 2px;
+    top: -2px;
+    color: rgb(252, 185, 226);
 }
 
 .infoText {
@@ -388,67 +407,44 @@ button:focus {
     position: relative;
     max-width: 100vw;
     height: 100%;
-    padding-top: 1vw;
+    padding-top: 4vw;
     color: rgba(252, 250, 245);
     text-shadow: 0 0 0.8rem rgba(0, 0, 0, 0.5);
     font-family: "Montserrat", sans-serif;
     font-size: 4vw;
     text-align: left;
-    margin-top: -6vw;
-    margin-left: 0;
+    margin-right: auto;
 }
 
 .linkWrap {
     display: block;
-    margin-bottom: 1vw;
+    margin-bottom: 4vw;
 }
 
-.actualLink {
-    display: flex;
-}
-
-#actualLinkID-small {
+.linkWrap .actualLink>p {
     margin-right: auto;
     color: rgb(239, 147, 147);
     font-size: 4vw;
-    padding-bottom: 18px;
 }
 
-@media only screen and (max-width: 425px) {
-
-
-    /* after --> */
+.separator {
+    display: block;
+    width: auto;
+    height: 5vw;
+}
 
 @media only screen and (max-width: 767px) {}
 
 @media only screen and (min-width: 768px) {
-    .popInfo-small {
-        display: none;
-        height: 0;
-    }
 
-    .popInfo {
-        display: flex;
-        flex-flow: column;
-        height: 100%;
-        width: 100%;
-        margin-top: -40px;
-        margin-left: -26vw;
-        padding-top: 4%;
+    
+    .spacing-div {
+        height: 30vh;
     }
-
-    .popPoster {
-        display: flex;
-        flex-flow: row;
-        min-height: 100vh;
-        overflow-x: hidden;
-        overflow-y: auto;
-    }
-
     .imgWrap {
-        display: flex;
-        padding-top: 20vh;
-        padding-left: 8%;
+        display: block;
+        width: 35vh;
+        padding-left: 5vw;
     }
 
     #popImage {
@@ -456,63 +452,67 @@ button:focus {
         height: 30vw;
     }
 
+    #glitterImage {
+        width: 30vw;
+        height: 30vw;
+    }
+
 
     .popTitle {
-        perspective: 400px;
-        margin-left: 27vw;
         text-emphasis: underline;
     }
 
     .popTitle h2 u {
-        transform: rotateX(45deg) rotateZ(-25deg);
-        -webkit-transform: rotateX(45deg) rotateZ(-25deg);
-        -moz-transform: rotateX(45deg) rotateZ(-25deg);
-        -ms-transform: rotateX(45deg) rotateZ(-25deg);
-        -o-transform: rotateX(45deg) rotateZ(-25deg);
-        -webkit-transform: otate(-20deg);
+        display: relative;
+        font-size: 5vw;
+        letter-spacing: 5px;
+        margin-top: -7vw;
+        margin-left: 3vw;
+        max-width: 30vw;
+     
     }
 
     /* attribution tutor for text shadow - https://line25.com/tutorials/how-to-create-a-cool-anaglyhic-text-effect-with-css */
-.popTitle h2 u:after {
-    content: "CHOREOPOP";
-    position: absolute;
-    left: 3px;
-    top: 2px;
-    color: rgb(122, 253, 242);
-}
-    .Info3d {
-        perspective: 250px;
-
+    .popTitle h2 u:after {
+        content: "CHOREOPOP";
+        position: absolute;
+        left: 3px;
+        top: 2px;
+        color: rgb(122, 253, 242);
     }
 
-    .popInfo h2 u {
-        margin-top: 1vw;
-        font-size: 5vw;
-        letter-spacing: 8px;
+    .glitterTitle h2 u {
+        display: relative;
+        font-size: 4vw;
+        letter-spacing: 5px;
+        margin-top: -7vw;
+        max-width: 30vw;
     }
+
 
     .infoText {
-        text-align: left;
-        max-width: 65vw;
-        font-size: 2vw;
-        padding-top: 24vw;
-        padding-left: 28vw;
-        background-color: rgba(127, 255, 212, 0);
-        transform: rotateX(60deg) rotateZ(60deg);
-        -webkit-transform: rotateX(20deg) rotateZ(24deg);
-        -moz-transform: rotateX(60deg) rotateZ(60deg);
-        -ms-transform: rotateX(60deg) rotateZ(60deg);
-        -o-transform: rotateX(60deg) rotateZ(60deg);
+        max-width: 42vw;
+        padding-top: 2vw;
+        font-size: 2.2vw;
+        margin-top: 1vw;
+        margin-left: 3vw;
     }
 }
 
-#actualLinkID {
-    color: rgb(239, 147, 147);
-    align-self: flex-start;
-    font-size: 2vw;
-    margin-right: auto;
-    margin-top: 1px;
+.linkWrap {
+    margin-bottom: 4vw;
 }
+
+.linkWrap .actualLink>p {
+    margin-right: auto;
+    color: rgb(239, 147, 147);
+    font-size: 2.4vw;
+}
+
+.separator {
+    display: block;
+    width: auto;
+    height: 5vw;
 }
 
 @media only screen and (min-width: 1024px) {
